--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width">
+<title>redpin</title>
 <link href="buttons.css" rel="stylesheet">
 <link href="list.css" rel="stylesheet">
 <link href="input.css" rel="stylesheet">
