--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@ document.getElementById('x').value=option.data.url;
 //var h = option.data.url;
 //var h1 = 'http://www.reddit.com/submit.compact?url=' + escape(h); 
 //window.open(h1,'_blank');
-//javascript:(function() { var s = document.createElement("script"); s.setAttribute("id", "bitmark_js"); s.setAttribute("type", "text/javascript"); s.setAttribute("src", "//bitly.com/a/bitmarklet.js"); (top.document.body || top.document.getElementsByTagName("head")[0]).appendChild(s); })();
-//javascript:(function(){var%20w=600;var%20h=550;var%20x=Number((window.screen.width-w)/2);var%20y=Number((window.screen.height-h)/2);window.open('https://plus.google.com/share?url='+encodeURIComponent(location.href)+'&title='+encodeURIComponent(document.title),'','width='+w+',height='+h+',left='+x+',top='+y+',scrollbars=auto');})();
+//http://twitter.com/share?url=https%3A%2F%2Fredpin.5apps.com%2F
 });
 
 
@@ -57,16 +56,20 @@ requestt.onsuccess = function() {
 
 <button onclick="var h1 = 'http://www.reddit.com/submit.compact?url=' + escape(document.getElementById('x').value);window.open(h1,'_blank');"><img class="iconn" src="icon.svg" alt="Reddit" /> reddit</button>
 
+<button onclick="var h1 = 'http://twitter.com/share?url=' + encodeURIComponent(document.getElementById('x').value);window.open(h1,'_blank');"><img class="iconn" src="twitter.svg" alt="twitter" /> twitter</button>
+
 <button onclick="var h1 = 'https://plus.google.com/share?url=' + encodeURIComponent(document.getElementById('x').value);window.open(h1,'_blank');"><img class="iconn" src="gplus.svg" alt="google+" /> google+</button>
 
 <br>
-<div id="installdiv"></div>
 <hr> 
+<div id="installdiv"></div>
+<!--
 <center>
 Created by <br> 
 <a href="http://www.reddit.com/user/mc96107/.compact" target="_blank">mc96107</a>
 <br>
 <img class="displayed" src="icon.svg" alt="Reddit" />
 </center>
+-->
 </body>
 </html>
