--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@ requestt.onsuccess = function() {
 
 </script>
 <style>
+body { background-color: #b0c4de; }
+
 .hidden{display:none !important;}
 
 .displayed {
