--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ body { background-color: #b0c4de; }
 
     <div class="github-fork-ribbon-wrapper left-bottom">
         <div class="github-fork-ribbon">
-            <a href="https://github.com/mc96107/redpin">Fork me on GitHub</a>
+            <a href="https://github.com/mc96107/redpin" target="_blank">Fork me on GitHub</a>
         </div>
     </div>
 <!--
