--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ body { background-color: #b0c4de; }
 
 <button onclick="var h1 = 'http://getpocket.com/save?url=' + encodeURIComponent(document.getElementById('x').value);window.open(h1,'_blank');"><img class="iconn" src="pocket.svg" alt="P" /> pocket</button>
 
-<button onclick="var d=document,f='https://www.facebook.com/share',l=d.getElementById('x').value,e=encodeURIComponent,p='.php?src=bm&v=4&i=1431085829&u='+e(l.href);1;try{if(!/^(.*\.)?facebook\.[^.]*$/.test(l.host))throw(0);share_internal_bookmarklet(p)}catch(z){a=function(){if(!window.open(f+'r'+p,'sharer','toolbar=0,status=0,resizable=1,width=626,height=436'))l.href=f+p};if(/Firefox/.test(navigator.userAgent))setTimeout(a,0);else{a()}}"><img class="iconn" src="facebook.svg" alt="F" /> facebook</button>
+<button onclick="var d=document,f='https://www.facebook.com/share',l=d.getElementById('x').value,e=encodeURIComponent,p='.php?src=bm&v=4&i=1431085829&u='+e(l);1;try{if(!/^(.*\.)?facebook\.[^.]*$/.test(l.host))throw(0);share_internal_bookmarklet(p)}catch(z){a=function(){if(!window.open(f+'r'+p,'sharer','toolbar=0,status=0,resizable=1,width=626,height=436'))l.href=f+p};if(/Firefox/.test(navigator.userAgent))setTimeout(a,0);else{a()}}"><img class="iconn" src="facebook.svg" alt="F" /> facebook</button>
 
 <button onclick="var h1 = 'https://plus.google.com/share?url=' + encodeURIComponent(document.getElementById('x').value);window.open(h1,'_blank');"><img class="iconn" src="gplus.svg" alt="G+" /> google+</button>
 
